Update Java DaCapo benchmark sample